k8s/istio-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: micro-gateway
  namespace: micro
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: customer-vs
  namespace: micro
spec:
  hosts:
  - "*"
  gateways:
  - micro-gateway
  http:
  - match:
    - uri:
        prefix: /customers/
    route:
    - destination:
        host: customer-service
        port:
          number: 8080
